# Beast-Copy

./: .env.example  .gitignore  Cargo.toml  README.md  cargo_errors.txt  cargo_full_errors.txt  cargo_out.txt  config.toml  dep_tree.txt  gamma_out.txt  run.bat
examples/: gamma_test.rs  rtds_test.rs
public/: app.js  index.html  style.css
src/: config.rs  main.rs  types.rs
src/api/: server.rs
src/engines/: copy_engine.rs  mod.rs  position_tracker.rs  rtds_engine.rs  wallet_tracker.rs
src/execution/: clob_executor.rs  mod.rs  settlement.rs
src/risk/: mod.rs  risk_gate.rs
src/storage/: db.rs  memory_store.rs  mod.rs
src/telegram/: bot.rs
src/tui/: dashboard.rs
src/utils/: logger.rs  math.rs
