[package]
name = "poly-apex-copy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "rust_decimal"] }
rust_decimal = "1"
toml = "0.8"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal_macros = "1"
chrono = "0.4"
polymarket-rs = "0.2.0"
alloy-primitives = "0.8.26"
alloy-signer-local = "0.7.3"
dotenvy = "0.15.7"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tower = { version = "0.5.3", features = ["util"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
url = "2.5.8"
